Added breakfast menu in the menu.html page

--- a/meni.html
+++ b/meni.html
@@ -25,58 +25,68 @@
     </header>
     <div id="main"></div>
     <div class="part">
-        <div class="container black-text d-flex flex-direction-column justify-content-around">
-            <h2 class=" mt-7 uppercase">Doručak</h2>
-            <div class="swiperMenu">
-                <div class="swiper-wrapper">
-                    <!-- <div class="swiper-slide d-flex flex-direction-column">
-                            <img src="assets/img/jelodana.png" alt="Engleski doručak" class="img-fluid w-50"/>
-                            <div class="pl-1">
-                                <h3 class="pb-1">Engleski doručak</h3>
-                                <p>pržena jaja, kobasica, paradajz</p>
-                                <p>350 RSD</p>
-                            </div>
+        <div class="container black-text ">
+            <h2 class=" mt-12">Doručak</h2>
+            <div class="d-flex flex-wrap justify-content-between align-items-center h-80">
+                <div class="menu-item d-flex flex-direction-column w-30">
+                    <img src="assets/img/dorucak1.jpg" alt="Engleski doručak" class="img-fluid"/>
+                    <div>
+                        <div class="d-flex justify-content-between">
+                            <h3>Engleski doručak</h3>
+                            <p>350 RSD</p>
+                        </div>
+                        <p>pržena jaja, kobasica, paradajz</p>
                     </div>
-                    <div class="swiper-slide d-flex flex-direction-column">
-                        <img src="assets/img/jelodana.png" alt="Engleski doručak" class="img-fluid w-50"/>
-                        <div class="pl-1">
-                            <h3 class="pb-1">Prženice</h3>
-                            <p>tost hleb,panir masa</p>
+                </div>
+                <div class="menu-item d-flex flex-direction-column w-30">
+                    <img src="assets/img/dorucak2.jpg" alt="Prženice" class="img-fluid"/>
+                    <div>
+                        <div class="d-flex justify-content-between">
+                            <h3>Prženice</h3>
                             <p>300 RSD</p>
                         </div>
+                        <p>tost hleb,panir masa</p>
                     </div>
-                    <div class="swiper-slide d-flex flex-direction-column">
-                        <img src="assets/img/jelodana.png" alt="Engleski doručak" class="img-fluid w-50"/>
-                        <div class="pl-1">
-                            <h3 class="pb-1">Sendvič sa pršutom</h3>
-                            <p>hleb, pršuta, kačkavalj, paradajz</p>
+                </div>
+                <div class="menu-item d-flex flex-direction-column w-30">
+                    <img src="assets/img/dorucak3.jpg" alt="Sendvič sa pršutom" class="img-fluid"/>
+                    <div>
+                        <div class="d-flex justify-content-between">
+                            <h3>Sendvič sa pršutom</h3>
                             <p>390 RSD</p>
                         </div>
+                        <p>hleb, pršuta, kačkavalj, paradajz</p>
                     </div>
-                    <div class="swiper-slide d-flex flex-direction-column">
-                        <img src="assets/img/jelodana.png" alt="Engleski doručak" class="img-fluid w-50"/>
-                        <div class="pl-1">
-                            <h3 class="pb-1">Wrap sa piletinom</h3>
-                            <p>tortilja, zel.salata, piletina, kačkavalj</p>
+                </div>
+                <div class="menu-item d-flex flex-direction-column w-30">
+                    <img src="assets/img/dorucak4.jpg" alt="Wrap sa piletinom" class="img-fluid"/>
+                    <div>
+                        <div class="d-flex justify-content-between">
+                            <h3>Wrap sa piletinom</h3>
                             <p>430 RSD</p>
                         </div>
+                        <p>tortilja, zel.salata, piletina, kačkavalj</p>
                     </div>
-                    <div class="swiper-slide d-flex flex-direction-column">
-                        <img src="assets/img/jelodana.png" alt="Engleski doručak" class="img-fluid w-50"/>
-                        <div class="pl-1">
-                            <h3 class="pb-1">Engleski doručak</h3>
-                            <p>pržena jaja, kobasica, paradajz</p>
-                            <p>350 RSD</p>
+                </div>
+                <div class="menu-item d-flex flex-direction-column w-30">
+                    <img src="assets/img/dorucak5.jpg" alt="Zest doručak" class="img-fluid"/>
+                    <div>
+                        <div class="d-flex justify-content-between">
+                            <h3>Zest doručak</h3>
+                            <p>320 RSD</p>
                         </div>
+                        <p>pržena jaja, povrće</p>
                     </div>
-                    <div class="swiper-slide d-flex flex-direction-column">
-                        <img src="assets/img/jelodana.png" alt="Engleski doručak" class="img-fluid w-50"/>
-                        <div class="pl-1">
-                            <h3 class="pb-1">Engleski doručak</h3>
-                            <p>pržena jaja, kobasica, paradajz</p>
-                            <p>350 RSD</p>
+                </div>
+                <div class="menu-item d-flex flex-direction-column w-30">
+                    <img src="assets/img/dorucak6.jpg" alt="Kaša" class="img-fluid"/>
+                    <div>
+                        <div class="d-flex justify-content-between">
+                            <h3>Kaša</h3>
+                            <p>290 RSD</p>
                         </div>
-                    </div> -->
+                        <p>ovsena kaša, voće</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -252,46 +262,7 @@
             </div>
         </div>
     </div>
-    <!-- <main class="container part">
-        <h1 class="uppercase m1">Jelovnik</h1>
-        <div class="d-flex justify-content-between" id="main-menu">
-            <section class="menuSection active-menu">
-                <h2 class="text-orientation-upright text-orientation-initial naslov">Doručak</h2>
-                <div class="menuArticle inactive-menuArticle active-menuArticle">
-                    <article class="d-flex m1 w-90">
-                        <img src="assets/img/dorucak1.jpg" alt="Engleski doručak"/>
-                        <div class="pl-1">
-                            <h3 class="pb-1">Engleski doručak</h3>
-                            <p>pržena jaja, kobasica, paradajz</p>
-                            <p>350 RSD</p>
-                        </div>
-                    </article>
-                    <article class="d-flex m1 w-90">
-                        <img src="assets/img/dorucak2.jpg" alt="Prženice"/>
-                        <div class="pl-1">
-                            <h3 class="pb-1">Prženice</h3>
-                            <p>tost hleb,panir masa</p>
-                            <p>300 RSD</p>
-                        </div>
-                    </article>
-                    <article class="d-flex m1 w-90">
-                        <img src="assets/img/dorucak3.jpg" alt="Sendvič sa pršutom"/>
-                        <div class="pl-1">
-                            <h3 class="pb-1">Sendvič sa pršutom</h3>
-                            <p>hleb, pršuta, kačkavalj, paradajz</p>
-                            <p>390 RSD</p>
-                        </div>
-                    </article>
-                    <article class="d-flex m1 w-90">
-                        <img src="assets/img/dorucak4.jpg" alt="Wrap sa piletinom"/>
-                        <div class="pl-1">
-                            <h3 class="pb-1">Wrap sa piletinom</h3>
-                            <p>tortilja, zel.salata, piletina, kačkavalj</p>
-                            <p>430 RSD</p>
-                        </div>
-                    </article>
-                </div>
-            </section>
+    <!-- 
             <section class="menuSection">
                 <h2 class="text-orientation-upright naslov"> Glavna jela</h2>
                 <div class="menuArticle inactive-menuArticle">
