--- a/meni.html
+++ b/meni.html
@@ -30,8 +30,8 @@
             <div class="d-flex flex-wrap justify-content-between align-items-center h-80">
                 <div class="menu-item d-flex flex-direction-column w-30">
                     <img src="assets/img/dorucak1.jpg" alt="Engleski doručak" class="img-fluid"/>
-                    <div>
-                        <div class="d-flex justify-content-between">
+                    <div class="">
+                        <div class="d-flex justify-content-between ">
                             <h3>Engleski doručak</h3>
                             <p>350 RSD</p>
                         </div>
