Added the rest of the courses, some images need to be added

--- a/meni.html
+++ b/meni.html
@@ -26,348 +26,35 @@
     <div class="part">
         <div class="container black-text">
             <h2 class=" mt-12">Doručak</h2>
-            <div class="d-flex flex-wrap justify-content-between align-items-center h-80">
-                <div class="menu-item d-flex flex-direction-column w-30">
-                    <img src="assets/img/dorucak1.jpg" alt="Engleski doručak" class="img-fluid"/>
-                    <div class="">
-                        <div class="d-flex justify-content-between ">
-                            <h3>Engleski doručak</h3>
-                            <p>350 RSD</p>
-                        </div>
-                        <p>pržena jaja, kobasica, paradajz</p>
-                    </div>
-                </div>
-                <div class="menu-item d-flex flex-direction-column w-30">
-                    <img src="assets/img/dorucak2.jpg" alt="Prženice" class="img-fluid"/>
-                    <div>
-                        <div class="d-flex justify-content-between">
-                            <h3>Prženice</h3>
-                            <p>300 RSD</p>
-                        </div>
-                        <p>tost hleb,panir masa</p>
-                    </div>
-                </div>
-                <div class="menu-item d-flex flex-direction-column w-30">
-                    <img src="assets/img/dorucak3.jpg" alt="Sendvič sa pršutom" class="img-fluid"/>
-                    <div>
-                        <div class="d-flex justify-content-between">
-                            <h3>Sendvič sa pršutom</h3>
-                            <p>390 RSD</p>
-                        </div>
-                        <p>hleb, pršuta, kačkavalj, paradajz</p>
-                    </div>
-                </div>
-                <div class="menu-item d-flex flex-direction-column w-30">
-                    <img src="assets/img/dorucak4.jpg" alt="Wrap sa piletinom" class="img-fluid"/>
-                    <div>
-                        <div class="d-flex justify-content-between">
-                            <h3>Wrap sa piletinom</h3>
-                            <p>430 RSD</p>
-                        </div>
-                        <p>tortilja, zel.salata, piletina, kačkavalj</p>
-                    </div>
-                </div>
-                <div class="menu-item d-flex flex-direction-column w-30">
-                    <img src="assets/img/dorucak5.jpg" alt="Zest doručak" class="img-fluid"/>
-                    <div>
-                        <div class="d-flex justify-content-between">
-                            <h3>Zest doručak</h3>
-                            <p>320 RSD</p>
-                        </div>
-                        <p>pržena jaja, povrće</p>
-                    </div>
-                </div>
-                <div class="menu-item d-flex flex-direction-column w-30">
-                    <img src="assets/img/dorucak6.jpg" alt="Kaša" class="img-fluid"/>
-                    <div>
-                        <div class="d-flex justify-content-between">
-                            <h3>Kaša</h3>
-                            <p>290 RSD</p>
-                        </div>
-                        <p>ovsena kaša, voće</p>
-                    </div>
-                </div>
+            <div class="d-flex flex-wrap justify-content-between align-items-center h-80" id="breakfastMenu">
+                <!-- sadrzaj unet kroz javascript -->
             </div>
         </div>
     </div>
     <div class="part black bez-text">
         <div class="container ">
             <h2 class=" mt-12">Glavna jela</h2>
-            <div class="d-flex flex-wrap justify-content-between align-items-center h-80">
-                <div class="menu-item d-flex flex-direction-column w-30">
-                    <img src="assets/img/gjelo1.jpg" alt="Engleski doručak" class="img-fluid"/>
-                    <div class="">
-                        <div class="d-flex justify-content-between ">
-                            <h3>Carbonara</h3>
-                            <p>700 RSD</p>
-                        </div>
-                        <p>pančeta, jaja, parmezan, beli luk, belo vino</p>
-                    </div>
-                </div>
-                <div class="menu-item d-flex flex-direction-column w-30">
-                    <img src="assets/img/gjelo3.jpg" alt="Taljata sa pomfritom" class="img-fluid"/>
-                    <div>
-                        <div class="d-flex justify-content-between">
-                            <h3>Taljata sa pomfritom</h3>
-                            <p>640 RSD</p>
-                        </div>
-                        <p>biftek, pomfrit, ruzmarin, majčina dušica</p>
-                    </div>
-                </div>
-                <div class="menu-item d-flex flex-direction-column w-30">
-                    <img src="assets/img/gjelo2.jpg" alt="Prženice" class="img-fluid"/>
-                    <div>
-                        <div class="d-flex justify-content-between">
-                            <h3>Bolognese</h3>
-                            <p>700 RSD</p>
-                        </div>
-                        <p>mleveno meso, pelat, parmezan, začini</p>
-                    </div>
-                </div>
-                <div class="menu-item d-flex flex-direction-column w-30">
-                    <img src="assets/img/gjelo4.jpg" alt="Piletina sa povrćem" class="img-fluid"/>
-                    <div>
-                        <div class="d-flex justify-content-between">
-                            <h3>Piletina sa povrćem</h3>
-                            <p>590 RSD</p>
-                        </div>
-                        <p>piletina, kus kus, povrće</p>
-                    </div>
-                </div>
-                <div class="menu-item d-flex flex-direction-column w-30">
-                    <img src="assets/img/gjelo5.jpg" alt="Zest doručak" class="img-fluid"/>
-                    <div>
-                        <div class="d-flex justify-content-between">
-                            <h3>Zest ručak</h3>
-                            <p>320 RSD</p>
-                        </div>
-                        <p>piletina, povrće</p>
-                    </div>
-                </div>
-                <div class="menu-item d-flex flex-direction-column w-30">
-                    <img src="assets/img/dorucak6.jpg" alt="Kaša" class="img-fluid"/>
-                    <div>
-                        <div class="d-flex justify-content-between">
-                            <h3>Kaša</h3>
-                            <p>290 RSD</p>
-                        </div>
-                        <p>ovsena kaša, voće</p>
-                    </div>
-                </div>
+            <div class="d-flex flex-wrap justify-content-between align-items-center h-80" id="mainCoursesMenu">
+                <!-- sadrzaj unet kroz javascript -->
             </div>
         </div>
     </div>
     <div class="part">
         <div class="container black-text">
             <h2 class=" mt-12">Salate</h2>
-            <div class="d-flex flex-wrap justify-content-between align-items-center h-80">
-                <div class="menu-item d-flex flex-direction-column w-30">
-                    <img src="assets/img/dorucak1.jpg" alt="Engleski doručak" class="img-fluid"/>
-                    <div class="">
-                        <div class="d-flex justify-content-between ">
-                            <h3>Engleski doručak</h3>
-                            <p>350 RSD</p>
-                        </div>
-                        <p>pržena jaja, kobasica, paradajz</p>
-                    </div>
-                </div>
-                <div class="menu-item d-flex flex-direction-column w-30">
-                    <img src="assets/img/dorucak2.jpg" alt="Prženice" class="img-fluid"/>
-                    <div>
-                        <div class="d-flex justify-content-between">
-                            <h3>Prženice</h3>
-                            <p>300 RSD</p>
-                        </div>
-                        <p>tost hleb,panir masa</p>
-                    </div>
-                </div>
-                <div class="menu-item d-flex flex-direction-column w-30">
-                    <img src="assets/img/dorucak3.jpg" alt="Sendvič sa pršutom" class="img-fluid"/>
-                    <div>
-                        <div class="d-flex justify-content-between">
-                            <h3>Sendvič sa pršutom</h3>
-                            <p>390 RSD</p>
-                        </div>
-                        <p>hleb, pršuta, kačkavalj, paradajz</p>
-                    </div>
-                </div>
-                <div class="menu-item d-flex flex-direction-column w-30">
-                    <img src="assets/img/dorucak4.jpg" alt="Wrap sa piletinom" class="img-fluid"/>
-                    <div>
-                        <div class="d-flex justify-content-between">
-                            <h3>Wrap sa piletinom</h3>
-                            <p>430 RSD</p>
-                        </div>
-                        <p>tortilja, zel.salata, piletina, kačkavalj</p>
-                    </div>
-                </div>
-                <div class="menu-item d-flex flex-direction-column w-30">
-                    <img src="assets/img/dorucak5.jpg" alt="Zest doručak" class="img-fluid"/>
-                    <div>
-                        <div class="d-flex justify-content-between">
-                            <h3>Zest doručak</h3>
-                            <p>320 RSD</p>
-                        </div>
-                        <p>pržena jaja, povrće</p>
-                    </div>
-                </div>
-                <div class="menu-item d-flex flex-direction-column w-30">
-                    <img src="assets/img/dorucak6.jpg" alt="Kaša" class="img-fluid"/>
-                    <div>
-                        <div class="d-flex justify-content-between">
-                            <h3>Kaša</h3>
-                            <p>290 RSD</p>
-                        </div>
-                        <p>ovsena kaša, voće</p>
-                    </div>
-                </div>
+            <div class="d-flex flex-wrap justify-content-between align-items-center h-80" id="saladsMenu">
+                <!-- sadrzaj unet kroz javascript -->
             </div>
         </div>
     </div>
     <div class="part black bez-text">
         <div class="container ">
             <h2 class=" mt-12">Dezerti</h2>
-            <div class="d-flex flex-wrap justify-content-between align-items-center h-80">
-                <div class="menu-item d-flex flex-direction-column w-30">
-                    <img src="assets/img/dorucak1.jpg" alt="Engleski doručak" class="img-fluid"/>
-                    <div class="">
-                        <div class="d-flex justify-content-between ">
-                            <h3>Engleski doručak</h3>
-                            <p>350 RSD</p>
-                        </div>
-                        <p>pržena jaja, kobasica, paradajz</p>
-                    </div>
-                </div>
-                <div class="menu-item d-flex flex-direction-column w-30">
-                    <img src="assets/img/dorucak2.jpg" alt="Prženice" class="img-fluid"/>
-                    <div>
-                        <div class="d-flex justify-content-between">
-                            <h3>Prženice</h3>
-                            <p>300 RSD</p>
-                        </div>
-                        <p>tost hleb,panir masa</p>
-                    </div>
-                </div>
-                <div class="menu-item d-flex flex-direction-column w-30">
-                    <img src="assets/img/dorucak3.jpg" alt="Sendvič sa pršutom" class="img-fluid"/>
-                    <div>
-                        <div class="d-flex justify-content-between">
-                            <h3>Sendvič sa pršutom</h3>
-                            <p>390 RSD</p>
-                        </div>
-                        <p>hleb, pršuta, kačkavalj, paradajz</p>
-                    </div>
-                </div>
-                <div class="menu-item d-flex flex-direction-column w-30">
-                    <img src="assets/img/dorucak4.jpg" alt="Wrap sa piletinom" class="img-fluid"/>
-                    <div>
-                        <div class="d-flex justify-content-between">
-                            <h3>Wrap sa piletinom</h3>
-                            <p>430 RSD</p>
-                        </div>
-                        <p>tortilja, zel.salata, piletina, kačkavalj</p>
-                    </div>
-                </div>
-                <div class="menu-item d-flex flex-direction-column w-30">
-                    <img src="assets/img/dorucak5.jpg" alt="Zest doručak" class="img-fluid"/>
-                    <div>
-                        <div class="d-flex justify-content-between">
-                            <h3>Zest doručak</h3>
-                            <p>320 RSD</p>
-                        </div>
-                        <p>pržena jaja, povrće</p>
-                    </div>
-                </div>
-                <div class="menu-item d-flex flex-direction-column w-30">
-                    <img src="assets/img/dorucak6.jpg" alt="Kaša" class="img-fluid"/>
-                    <div>
-                        <div class="d-flex justify-content-between">
-                            <h3>Kaša</h3>
-                            <p>290 RSD</p>
-                        </div>
-                        <p>ovsena kaša, voće</p>
-                    </div>
-                </div>
+            <div class="d-flex flex-wrap justify-content-between align-items-center h-80" id="desertsMenu">
+                <!-- sadrzaj unet kroz javascript -->
             </div>
         </div>
     </div>
-    <!-- 
-            <section class="menuSection">
-                <h2 class="text-orientation-upright naslov">Salate</h2>
-                <div class="menuArticle inactive-menuArticle">
-                    <article class="d-flex m1 w-90">
-                        <img src="assets/img/cessal.jpg" alt="Cezar salata"/>
-                        <div class="pl-1">
-                            <h3 class="pb-1">Cezar salata</h3>
-                        <p>zelena salata, piletina, paradajz, peršun</p>
-                        <p>670 RSD</p>
-                    </div>
-                </article>
-                <article class="d-flex m1 w-90">
-                    <img src="assets/img/grksal.jpg" alt="Grčka salata"/>
-                    <div class="pl-1">
-                        <h3 class="pb-1">Grčka salata</h3>
-                        <p>paradajz, masline, krastavac, paprika, feta sir, origano</p>
-                        <p>400 RSD</p>
-                    </div>
-                </article>
-                <article class="d-flex m1 w-90">
-                    <img src="assets/img/salata3.jpg" alt="Biftek salata"/>
-                    <div class="pl-1">
-                        <h3 class="pb-1">Biftek salata</h3>
-                        <p>z. salata, parmezan, špargla</p>
-                        <p>390 RSD</p>
-                    </div>
-                </article>
-                <article class="d-flex m1 w-90">
-                    <img src="assets/img/salata4.jpg" alt="Engleski doručak"/>
-                    <div class="pl-1">
-                        <h3 class="pb-1">Miks salata</h3>
-                        <p>krastavci, mladi luk, sir</p>
-                        <p>270 RSD</p>
-                    </div>
-                </article>
-            </div>
-            </section>
-            <section class="menuSection">
-                <h2 class="text-orientation-upright naslov">Dezerti</h2>
-                <div class="menuArticle inactive-menuArticle">
-                    <article class="d-flex m1 w-90">
-                        <img src="assets/img/dezert1.jpg" alt="Karamel kolač"/>
-                        <div class="pl-1">
-                            <h3 class="pb-1">Karamel kolač</h3>
-                        <p>karamela, čokolada</p>
-                        <p>450 RSD</p>
-                    </div>
-                </article>
-                <article class="d-flex m1 w-90">
-                    <img src="assets/img/dezert2.jpg" alt="Red velvet"/>
-                    <div class="pl-1">
-                        <h3 class="pb-1">Red velvet</h3>
-                        <p>fil od jagoda, preliv od bele cokolade</p>
-                        <p>760 RSD</p>
-                    </div>
-                </article>
-                <article class="d-flex m1 w-90">
-                    <img src="assets/img/dezert3.jpg" alt="Američke palačinke"/>
-                    <div class="pl-1">
-                        <h3 class="pb-1">Američke palačinke</h3>
-                        <p>testo za palačnke, javorov sirup</p>
-                        <p>320 RSD</p>
-                    </div>
-                </article>
-                <article class="d-flex m1 w-90">
-                    <img src="assets/img/dezert4.jpg" alt="Čoko vafl"/>
-                    <div class="pl-1">
-                        <h3 class="pb-1">Čoko vafl</h3>
-                        <p>sladoled od vanile, valf, čokoladni preliv</p>
-                        <p>640 RSD</p>
-                    </div>
-                </article>
-            </div>
-            </section>
-        </div>
-    </main> -->
     <div class="part">
         <div class="nav-container d-flex justify-content-between flex-wrap align-items-center black-text w-100 h-70" id="newsletter-accordion">
             <!-- sadrzaj unet kroz javascript -->
