made some responsive changes

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
 
         <div class="part">
-            <div class="container black-text d-flex flex-direction-column justify-content-around">
+            <div class="container black-text d-flex flex-direction-column justify-content-around" id="topDishes">
                 <h2 class="mt-7">Izdvajamo</h2>
                     <div class="swiperDishes">
                         <div class="swiper-wrapper">
@@ -72,25 +72,6 @@
                 </div>
             </div>
         </div>
-
-        <!-- <div class="part">
-            <div class="container black-text d-flex flex-direction-column justify-content-around">
-                <h2 class="mt-7">Izdvajamo</h2>
-                    <div class="swiperImageGallery">
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide">
-                        <img src="assets/img/galerija1.jpg" alt="Slika iz galerije 1" class="img-fluid mb-2"/>
-                            </div>
-                            <div class="swiper-slide">
-                                <img src="assets/img/vitalii-chernopyskyi-Oxb84ENcFfU-unsplash.jpg" alt="Engleski doručak" />
-                            </div>
-                        </div>
-                        <div class="swiper-button-prev"></div>
-                        <div class="swiper-button-next"></div>
-                    </div>
-            </div>
-        </div> -->
-    
         <div class="part">
             <div class="nav-container d-flex justify-content-between flex-wrap align-items-center black-text w-100 h-70" id="newsletter-accordion">
                 <!-- sadrzaj unet kroz javascript -->
@@ -99,11 +80,13 @@
                 <!-- sadrzaj unet kroz javascript -->
             </footer>
         </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollify/1.0.21/jquery.scrollify.min.js" integrity="sha512-UyX8JsMsNRW1cYl8BoxpcamonpwU2y7mSTsN0Z52plp7oKo1u92Xqfpv6lOlTyH3yiMXK+gU1jw0DVCsPTfKew==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <!-- js -->
-    <script type="text/javascript" src="assets/js/main.js"></script>
+        <!-- jquery -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <!-- swiper -->
+        <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+        <!-- scrollify -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollify/1.0.21/jquery.scrollify.min.js" integrity="sha512-UyX8JsMsNRW1cYl8BoxpcamonpwU2y7mSTsN0Z52plp7oKo1u92Xqfpv6lOlTyH3yiMXK+gU1jw0DVCsPTfKew==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <!-- js -->
+        <script type="text/javascript" src="assets/js/main.js"></script>
 </body>
 </html>
