--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
                 <h2 class="mt-7">Izdvajamo</h2>
                     <div class="swiperDishes">
                         <div class="swiper-wrapper">
-                          <!-- Slides -->
                           <!-- sadrzaj unet kroz javascript -->
                         </div>
                         <div class="swiper-button-prev"></div>
@@ -64,10 +63,7 @@
                             Porro quia non repellat commodi facilis suscipit sequi, nemo neque? Obcaecati labore amet autem ducimus incidunt? At laboriosam, cum eveniet iste nesciunt eos officiis velit maxime est, voluptatibus explicabo assumenda?
                         </p>
                     </div>
-                    <div class="d-flex justify-content-between">
-                        <div class="slike-proba"></div>
-                        <div class="slike-proba"></div>
-                    </div>
+                    <img src="assets/img/restoran.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -89,3 +85,4 @@
         <script type="text/javascript" src="assets/js/main.js"></script>
 </body>
 </html>
+
