changed landing page and added package.json

--- a/index.html
+++ b/index.html
@@ -23,15 +23,17 @@
 </head>
 
 <body class="bez">
+    <header>
+        <nav>
+        </nav>
+    </header>
         <div class="bg part">
-            <header>
-                <nav>
-                </nav>
-            </header>
-            <div id="landingPageVideo"></div>
-            <!-- <video autoplay muted loop id="landingPageVideo">
-                <source src="assets/video/video.mp4" type="video/mp4">
-            </video> -->
+            <div class="video-container">
+                <!-- <div id="landingPageVideo"></div> -->
+                <video autoplay muted loop id="landingPageVideo">
+                    <source src="mixkit-surface-covered-with-many-fruits-and-vegetables-seen-in-detail-10433.mp4" type="video/mp4">
+                </video>
+            </div>
             <div id="hero">
                 <h1>ZEST.</h1>
                 <h2>Restoran koji nudi najbolju hranu i ambijent!</h2>
