--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         <nav>
         </nav>
     </header>
-        <div class="bg part">
+        <div class="part">
             <div class="video-container">
                 <!-- <div id="landingPageVideo"></div> -->
                 <video autoplay muted loop id="landingPageVideo">
-                    <source src="mixkit-surface-covered-with-many-fruits-and-vegetables-seen-in-detail-10433.mp4" type="video/mp4">
+                    <source src="assets/video/landingPageVideo.mp4" type="video/mp4">
                 </video>
             </div>
             <div id="hero">
@@ -54,23 +54,8 @@
                     </div>
             </div>
         </div>
-
-        <div class="part black bez-text">
-            <div class="container d-flex flex-direction-column justify-content-around">
-                <h2 class="mt-7">Ko smo mi?</h2>
-                <div class="d-flex justify-content-between align-items-center">
-                    <div class="w-45">
-                        <h3>Restoran italijanske kuhinje sa najukusnijom hranom</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui at asperiores eum quis ad ipsum, aliquam inventore quas enim earum consectetur, nesciunt, vitae sequi nam libero nobis optio eius placeat!
-                            Porro quia non repellat commodi facilis suscipit sequi, nemo neque? Obcaecati labore amet autem ducimus incidunt? At laboriosam, cum eveniet iste nesciunt eos officiis velit maxime est, voluptatibus explicabo assumenda?
-                        </p>
-                    </div>
-                    <img src="assets/img/restoran.jpg" alt="">
-                </div>
-            </div>
-        </div>
         <div class="part">
-            <div class="nav-container d-flex justify-content-between flex-wrap align-items-center black-text w-100 h-70" id="newsletter-accordion">
+            <div class="nav-container d-flex justify-content-between flex-wrap align-items-center black-text h-70" id="newsletter-accordion">
                 <!-- sadrzaj unet kroz javascript -->
             </div>
             <footer class=" p1 nav-container d-flex flex-wrap justify-content-between align-items-center bez-text h-30 black">
