--- a/kontakt.html
+++ b/kontakt.html
@@ -17,7 +17,6 @@
     <!-- swiper -->
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
 </head>
-
 <body class="bez">
     <header>
         <nav>
@@ -25,9 +24,9 @@
         </nav>
     </header>
     <div class="part">
-        <div class="container d-flex flex-direction-column justify-content-around">
-            <h2 class="mt-7 black-text">Kontaktirajte nas</h2>
-            <div class="d-flex justify-content-between" id="formIframe">
+        <div class="container">
+            <h2 class="mt-12 black-text">Kontaktirajte nas</h2>
+            <div class="d-flex flex-wrap justify-content-between align-items-center h-80" id="formIframe">
                 <form action="#" method="get" class="w-50 d-flex flex-direction-column" name="contact-form">
                     <!-- ime -->
                     <label for="formName">Ime</label>
@@ -49,7 +48,7 @@
         </div>
     </div>
     <div class="part">
-        <div class="nav-container d-flex justify-content-between flex-wrap align-items-center black-text w-100 h-70" id="newsletter-accordion">
+        <div class="nav-container d-flex justify-content-between flex-wrap align-items-center black-text h-70" id="newsletter-accordion">
             <!-- sadrzaj unet kroz javascript -->
         </div>
         <footer class=" p1 nav-container d-flex flex-wrap justify-content-between align-items-center bez-text h-30 black">
