--- a/meni.html
+++ b/meni.html
@@ -56,7 +56,7 @@
         </div>
     </div>
     <div class="part">
-        <div class="nav-container d-flex justify-content-between flex-wrap align-items-center black-text w-100 h-70" id="newsletter-accordion">
+        <div class="nav-container d-flex justify-content-between flex-wrap align-items-center black-text h-70" id="newsletter-accordion">
             <!-- sadrzaj unet kroz javascript -->
         </div>
         <footer class=" p1 nav-container d-flex flex-wrap justify-content-between align-items-center bez-text h-30 black">
